tests/textual/error/mkPairData.uplc
(program 0.0.0 [[(builtin mkPairData)
         (con data { List [ Integer 0, Integer 1 ] })]
         (con integer 3 )])
